[package]
name = "esp-hal-rmt-onewire"
version = "0.4.0"
edition = "2021"
description = "RMT adapter for onewire with esp-hal and embassy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jonored/esp-hal-rmt-onewire"

[package.metadata.fwcli]
platform = "esp"
esp_feature = "esp32s3"

[features]
default = ["esp32s3"]
search-masks = []
esp32s3 = [
    "esp-hal/esp32s3",
    "esp-backtrace/esp32s3",
    "esp-println/esp32s3",
]

[dependencies]
embassy-futures = { version = "0.1.1" }
esp-hal = { version = "1.0.0", features = ["unstable"] }

[dev-dependencies]
embassy-executor = { version = "0.10.0" }
esp-hal = { version = "1.0.0" }
esp-backtrace = { version = "0.18.1", features = [
    "println",
    "panic-handler",
] }
esp-println = { version = "0.16.1" }
embassy-time = "0.5.1"
fixed = "1.28.0"
